# apricot

./: .gitignore  CMakeLists.txt  README.md  helpers.cmake
boot/: CMakeLists.txt  bootenv  mkbootimg.json
include/: C17.h  bootboot.h  spec.h
kernel/: CMakeLists.txt  color.c  kutils.c  linker.ld  main.c  printf.c  psf.c  screen.c
kernel/arch/include/apricot/: arch.h
kernel/arch/x86_64/: CMakeLists.txt  arch.c  crti.S  crtn.S  gdt.c  load_gdt.S
kernel/arch/x86_64/include/apricot/: gdt.h  tss.h
kernel/fs/: CMakeLists.txt  tar.c
kernel/include/apricot/: color.h  fs.h  kutils.h  printf.h  psf.h  screen.h
